--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <style>
 /* Write styles here :) */
-    
+    body {text-align:center}
 </style>
 <body>
-    <h1 style="color:red">Donut World</h1>
+    <h1 style="color:red;">Donut World</h1>
     <img src="/uploads/2023/02/donut.png">
 </body>
 </html>
