--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>More actions
 <html lang='en'>
 <head>
     <meta charset='UTF-8'>
@@ -8,10 +8,12 @@
 </head>
 <style>
 /* Write styles here :) */
-    body {text-align:center}
+
+    
 </style>
 <body>
-    <h1 style="color:red;">Donut World</h1>
+    <h1>Donut World</h1>
+    <h1 style="color:red">Donut World</h1>
     <img src="/uploads/2023/02/donut.png">
 </body>
 </html>
